# pygmalion

./: .gitignore  LICENSE  Makefile  README.md  pygmalion.cabal
Pygmalion/: Metadata.hs  Pygmake.hs  Pygmalion.hs  Pygscan.hs  SourceDB.hs
examples/: .ycm_extra_conf.py  README.md  ccache.example.pygmalion.yaml  emacs.el.example  example.pygmalion.yaml  example.vimrc  example.ycm_extra_conf.py  pygmalion.yaml.default  vimrc.example  ycm_extra_conf.py.example
indexers/: Pygindexclang.hs
indexers/Pygmalion/Index/: Source.hs
src/Control/Concurrent/Chan/: Counting.hs  Len.hs
src/Control/Exception/: Labeled.hs
src/Data/Bool/: Predicate.hs
src/Pygmalion/: Analyze.hs  Config.hs  Core.hs  Database.hs  Dot.hs  File.hs  Hash.hs  Idle.hs  JSON.hs  Log.hs  Make.hs  Metadata.hs  SourceDB.hs  SourceKind.hs
src/Pygmalion/Analysis/: ClangRequest.hs  Command.hs  Extension.hs  Manager.hs  Source.hs
src/Pygmalion/Analyze/: Command.hs  Extension.hs  Source.hs
src/Pygmalion/Database/: IO.hs  Manager.hs  Orphans.hs  Request.hs
src/Pygmalion/Index/: Command.hs  Extension.hs  Manager.hs  Request.hs  Result.hs  Source.hs  Stream.hs
src/Pygmalion/RPC/: Client.hs  Request.hs  Server.hs
tests/: ForwardDeclarations.hs  Functional.hs  Macros.hs  QuickCheck.hs  Spec.hs  TemplateFunctions.hs  VirtualMethods.hs  VirtualMethodsInStructs.hs  VirtualMethodsWithNoOverride.hs  bitfields.cpp  casts.cpp  classes.cpp  enums.cpp  functions.cpp  global-variables.cpp  identifiers.cpp  local-variables.cpp  macros.cpp  method-pointers.cpp  namespaces.cpp  preprocessor-functions.cpp  preprocessor-macros.cpp  structs.cpp  typedefs.cpp  unions.cpp  variables.cpp  virtual-in-return-value.cpp  virtual-in-structs.cpp  virtual-no-override.cpp  virtual.cpp  virtual.h
tests/.pygmalion/: pygmalion.yaml
tests/FoundDeclarations/: FoundDeclarations.golden  Makefile  a.cpp  b.cpp  b.h  c.cpp  c.h
tests/FoundTransitiveIncludes/: a.c  b.h
tests/NoCommands/: Makefile
tests/Pygmalion/: Test.hs
tests/Pygmalion/Test/: TH.hs
tests/RemoveBadArguments/: RemoveBadArguments.golden
tests/Simple/: .pygmalion.conf  Makefile  Simple.golden
tests/old/FoundDeclarations/: b.h  c.h
tests/old/FoundLocalIncludes/: FoundLocalIncludes.golden  a.c  b.h  c.h
tests/old/RemoveBadArguments/: Makefile  e.c
tools/: Pygclangindex.hs  Pygd.hs  Pygmake.hs  Pygmalion.hs  Pygscan.hs
