name:                pygmalion
version:             0.1.0.0
synopsis:            A code analysis tool based on libclang
homepage:            http://github.com/sfowler/pygmalion
license:             BSD3
license-file:        LICENSE
author:              Seth Fowler <mark.seth.fowler@gmail.com>
maintainer:          Seth Fowler <mark.seth.fowler@gmail.com>
copyright:           Copyright (C) 2013 Seth Fowler
category:            Development
build-type:          Simple
cabal-version:       >=1.8

library
  ghc-options:     -Wall -O -threaded
  build-depends:   base >= 4,
                   async,
                   bytestring,
                   cereal,
                   cereal-conduit,
                   cityhash,
                   conduit,
                   configurator,
                   containers,
                   datetime,
                   direct-sqlite,
                   directory,
                   filepath,
                   ghc-prim,
                   hslogger,
                   json,
                   mtl,
                   network,
                   network-conduit,
                   process,
                   safe,
                   sqlite-simple,
                   stm,
                   text,
                   time,
                   transformers,
                   unordered-containers,
                   utf8-string,
                   LibClang >= 0.2,
                   MissingH
  exposed-modules: Control.Concurrent.Chan.Len,
                   Pygmalion.Index.Command,
                   Pygmalion.Index.Extension,
                   Pygmalion.Index.Manager,
                   Pygmalion.Index.Source,
                   Pygmalion.Config,
                   Pygmalion.Core,
                   Pygmalion.Database.IO,
                   Pygmalion.Database.Manager,
                   Pygmalion.Hash,
                   Pygmalion.JSON,
                   Pygmalion.Log,
                   Pygmalion.RPC.Client,
                   Pygmalion.RPC.Request,
                   Pygmalion.RPC.Server
                   Pygmalion.SourceKind
  other-modules:   Control.Exception.Labeled,
                   Data.Bool.Predicate
  hs-source-dirs:  src

executable pygmalion
  ghc-options:    -Wall -O -threaded -rtsopts -with-rtsopts=-N
  main-is:        Pygmalion.hs 
  build-depends:  base >= 4,
                  directory,
                  pygmalion,
                  safe,
                  utf8-string,
                  MissingH
  hs-source-dirs: tools

executable pygmake
  ghc-options:    -Wall -O -threaded -rtsopts -with-rtsopts=-N
  main-is:        Pygmake.hs 
  build-depends:  base >= 4,
                  async,
                  directory,
                  process,
                  pygmalion,
                  text
  hs-source-dirs: tools

executable pygscan
  ghc-options:    -Wall -O -threaded -rtsopts -with-rtsopts=-N
  main-is:        Pygscan.hs 
  build-depends:  base >= 4,
                  async,
                  mtl,
                  process,
                  pygmalion,
                  text
  hs-source-dirs: tools

executable pygd
  ghc-options:    -Wall -O -threaded -rtsopts -with-rtsopts=-N
  main-is:        Pygd.hs 
  build-depends:  base >= 4
               ,  async
               ,  containers
               ,  directory
               ,  filepath
               ,  fsnotify
               ,  mtl
               ,  pygmalion
               ,  system-filepath
               ,  time
               ,  void
               ,  MissingH
  hs-source-dirs: tools

executable pygclangindex
  ghc-options:    -Wall -O -threaded -rtsopts -with-rtsopts=-N
  main-is:        Pygclangindex.hs 
  build-depends:  base >= 4
               ,  directory
               ,  pygmalion
               ,  unix
               ,  utf8-string
  hs-source-dirs: tools

test-suite pygmalion-quickcheck
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  type:           exitcode-stdio-1.0
  main-is:        QuickCheck.hs
  build-depends:  base >= 4,
                  pygmalion,
                  QuickCheck,
                  test-framework,
                  test-framework-quickcheck2
  other-modules:  Data.Bool.Predicate
  hs-source-dirs: src,
                  tests

test-suite pygmalion-functional
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  type:           exitcode-stdio-1.0
  main-is:        Functional.hs
  build-depends:  base >= 4,
                  directory,
                  process,
                  pygmalion,
                  test-framework,
                  test-framework-golden
  hs-source-dirs: tests
