name:                pygmalion
version:             0.1.0.0
synopsis:            A code analysis tool based on libclang
homepage:            http://github.com/sfowler/pygmalion
license:             BSD3
license-file:        LICENSE
author:              Seth Fowler <mark.seth.fowler@gmail.com>
maintainer:          Seth Fowler <mark.seth.fowler@gmail.com>
copyright:           Copyright (C) 2013 Seth Fowler
category:            Development
build-type:          Simple
cabal-version:       >=1.8

library
  ghc-options:     -Wall -O -threaded
  build-depends:   base >= 4,
                   aeson,
                   async,
                   bytestring,
                   cereal,
                   cereal-conduit,
                   cityhash,
                   conduit,
                   configurator,
                   containers,
                   cryptohash,
                   direct-sqlite,
                   directory,
                   filepath,
                   ghc-prim,
                   hslogger,
                   json,
                   mtl,
                   network,
                   network-conduit,
                   process,
                   safe,
                   sqlite-simple,
                   stm,
                   text,
                   time,
                   transformers,
                   unordered-containers,
                   utf8-string,
                   yaml >= 0.8.4,
                   MissingH
  exposed-modules: Control.Concurrent.Chan.Len,
                   Data.Bool.Predicate,
                   Pygmalion.Index.Command,
                   Pygmalion.Index.Extension,
                   Pygmalion.Index.Manager,
                   Pygmalion.Config,
                   Pygmalion.Core,
                   Pygmalion.Database.IO,
                   Pygmalion.Database.Manager,
                   Pygmalion.Hash,
                   Pygmalion.Index.Result,
                   Pygmalion.JSON,
                   Pygmalion.Log,
                   Pygmalion.RPC.Client,
                   Pygmalion.RPC.Request,
                   Pygmalion.RPC.Server
                   Pygmalion.SourceKind
  other-modules:   Control.Exception.Labeled
  hs-source-dirs:  src

executable pygmalion
  ghc-options:    -Wall -O -threaded -rtsopts -with-rtsopts=-N
  main-is:        Pygmalion.hs 
  build-depends:  base >= 4,
                  async,
                  directory,
                  mtl,
                  process,
                  pygmalion,
                  safe,
                  utf8-string,
                  MissingH
  hs-source-dirs: tools

executable pygmake
  ghc-options:    -Wall -O -threaded -rtsopts -with-rtsopts=-N
  main-is:        Pygmake.hs 
  build-depends:  base >= 4,
                  async,
                  process,
                  pygmalion,
                  text,
                  MissingH
  hs-source-dirs: tools

executable pygd
  ghc-options:    -Wall -O -threaded -rtsopts -with-rtsopts=-N
  main-is:        Pygd.hs 
  build-depends:  base >= 4
               ,  async
               ,  containers
               ,  directory
               ,  filepath
               ,  fsnotify
               ,  mtl
               ,  pygmalion
               ,  system-filepath
               ,  time
               ,  void
               ,  MissingH
  hs-source-dirs: tools

flag build-pygindex-clang
  description: Build the clang indexer.
  default:     False

executable pygindex-clang
  ghc-options:    -Wall -O -threaded -rtsopts -with-rtsopts=-N
  main-is:        Pygindexclang.hs 
  if flag(build-pygindex-clang)
    buildable:      True
    build-depends:  base >= 4
                 ,  bytestring
                 ,  directory
                 ,  LibClang >= 0.2
                 ,  MissingH
                 ,  pygmalion
                 ,  transformers
                 ,  unix
                 ,  utf8-string
    other-modules:  Pygmalion.Index.Source
  else
    buildable:      False
  hs-source-dirs: indexers

test-suite pygmalion-hspec
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  build-depends:  base >= 4,
                  directory,
                  hspec >= 1.7.2,
                  process,
                  pygmalion,
                  tuple,
                  HUnit,
                  QuickCheck
  hs-source-dirs: tests
