name:                pygmalion
version:             0.1.0.0
synopsis:            A code analysis tool based on libclang
homepage:            http://github.com/sfowler/pygmalion
license:             BSD3
license-file:        LICENSE
author:              Seth Fowler <mark.seth.fowler@gmail.com>
maintainer:          Seth Fowler <mark.seth.fowler@gmail.com>
copyright:           Copyright (C) 2013 Seth Fowler
category:            Development
build-type:          Simple
cabal-version:       >=1.8

library
  ghc-options:     -Wall -O -threaded
  build-depends:   base >= 4,
                   aeson,
                   async,
                   bytestring,
                   cereal,
                   cereal-conduit,
                   cereal-vector,
                   conduit,
                   configurator,
                   containers,
                   direct-sqlite >= 2.3.11,
                   directory,
                   ekg,
                   filepath,
                   fgl,
                   ghc-prim,
                   graphviz,
                   hashable >= 1.1.2.5 && < 1.2,
                   hslogger,
                   json,
                   mtl,
                   network,
                   network-conduit >= 1.0.2.1,
                   process,
                   safe,
                   sqlite-simple,
                   suspend,
                   stm,
                   text,
                   time,
                   timers,
                   transformers,
                   tuple,
                   unix,
                   unordered-containers,
                   utf8-string,
                   vector,
                   yaml >= 0.8.4,
                   MissingH
  exposed-modules: Control.Concurrent.Chan.Len,
                   Data.Bool.Predicate,
                   Pygmalion.Index.Command,
                   Pygmalion.Index.Extension,
                   Pygmalion.Index.Manager,
                   Pygmalion.Index.Request,
                   Pygmalion.Index.Stream,
                   Pygmalion.Config,
                   Pygmalion.Core,
                   Pygmalion.Database.IO,
                   Pygmalion.Database.Manager,
                   Pygmalion.Database.Request,
                   Pygmalion.Dot,
                   Pygmalion.File,
                   Pygmalion.Idle,
                   Pygmalion.JSON,
                   Pygmalion.Log,
                   Pygmalion.Metadata,
                   Pygmalion.RPC.Client,
                   Pygmalion.RPC.Request,
                   Pygmalion.RPC.Server
                   Pygmalion.SourceKind
  other-modules:   Control.Exception.Labeled,
                   Pygmalion.Database.Orphans
  hs-source-dirs:  src

executable pygmalion
  ghc-options:    -Wall -O -threaded -rtsopts -with-rtsopts=-N
  main-is:        Pygmalion.hs 
  build-depends:  base >= 4,
                  async,
                  directory,
                  mtl,
                  process,
                  pygmalion,
                  safe,
                  utf8-string,
                  MissingH
  hs-source-dirs: tools

executable pygmake
  ghc-options:    -Wall -O -threaded -rtsopts -with-rtsopts=-N
  main-is:        Pygmake.hs 
  build-depends:  base >= 4,
                  async,
                  process,
                  pygmalion,
                  text,
                  MissingH
  hs-source-dirs: tools

executable pygd
  ghc-options:    -Wall -O -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T
  main-is:        Pygd.hs 
  build-depends:  base >= 4
               ,  async
               ,  containers
               ,  directory
               ,  ekg
               ,  filepath
               ,  fsnotify
               ,  mtl
               ,  pygmalion
               ,  stm
               ,  system-filepath
               ,  time
               ,  void
               ,  MissingH
  hs-source-dirs: tools

flag build-pygindex-clang
  description: Build the clang indexer.
  default:     False

executable pygindex-clang
  ghc-options:    -Wall -O -threaded -rtsopts -with-rtsopts=-N
  main-is:        Pygindexclang.hs 
  if flag(build-pygindex-clang)
    buildable:      True
    build-depends:  base >= 4
                 ,  bytestring
                 ,  containers
                 ,  directory
                 ,  hashable
                 ,  LibClang >= 3.4.0 && < 3.5
                 ,  MissingH
                 ,  mtl
                 ,  pygmalion
                 ,  safe
                 ,  transformers
                 ,  unix
                 ,  utf8-string
                 ,  vector
    other-modules:  Pygmalion.Index.Source
  else
    buildable:      False
  hs-source-dirs: indexers

test-suite pygmalion-hspec
  ghc-options:    -O -threaded -rtsopts -with-rtsopts=-N
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  build-depends:  base >= 4,
                  directory,
                  hspec >= 1.7.2,
                  mtl,
                  process,
                  pygmalion,
                  tuple,
                  HUnit,
                  QuickCheck
  hs-source-dirs: tests
